- Option to disable sound device detection notifications in statusbar events
Android Client
- Fixed bug where join and leave events were not announced when focused on another channel
- Changed client name display format from "<ClientName> version <Version>" to "<ClientName> <Version>"
- Join last channel checkbox is now disabled by default in Server Properties Dialog
iOS Client
-
Server
-

Version 5.21.1, 2025/11/13
Server
- TeamTalk Pro option -weblogin to store BearWare.dk WebLogin in tt5prosrv.xml
- TeamTalk Pro option -tokenlogin to store BearWare.dk WebLogin in tt5prosrv.xml

Version 5.21, 2025/09/29
Default Qt Client
- Fixed Windows freeze issue closing Preferences dialog
- Windows changed to Qt 6.9.2
Server
- TeamTalk Pro server requires BearWare.dk WebLogin to start
- Fixed crash issue when sharing large desktop windows

Version 5.20.1, 2025/09/15
Android Client
- Fixed restoring of microphone gain to value from preferences at application start
- Fixed microphone gain to not drop to 0 when slider is at 0%

Version 5.20, 2025/09/14
Default Qt Client
- TeamTalk5.ini no longer stores values that have the same value as default
- Reintroduce option to speak tree item using TTS on macOS due to Qt issues
- Fixed check state of server log events on macOS not being visible
- Fixed global status message set to: "general_/statusmsg"
- Fixed answering "No" to quit application causing server disconnect
- Windows updated to Qt 6.10.0 beta4
- macOS changed to Qt 6.9.2 (still issues with VoiceOver)
- Minimum supported macOS version is now 12 (Monterey)
Android Client
- Fixed UI overlap on Android 15 and above
- Minimum supported Android version is now 5.0 (Lollipop)
Server
- Now logs changes to who is allowed to transmit
- Now logs when new streams (voice, video, etc.) are started

Version 5.19, 2025/08/05
Default Qt Client
- Ctrl+Shift+C to copy only message content in chat list
- Ctrl+Alt+Shift+C to copy all chat list history